fixed overflow of resume and also changed style of resume pag of mobile screen

--- a/src/containers/resume/styles.scss
+++ b/src/containers/resume/styles.scss
@@ -89,26 +89,62 @@
 }
 
 //******for small screen like mobile*****
+// @media only screen and (max-width: 768px) {
+//     .resume {
+//         overflow: hidden;
+//     }
+
+//     .timeline {
+//         flex-direction: column;  /* Fix the typo here */
+
+//         &__experience,
+//         &__education {
+//             width: 100%;
+//             gap: 2rem;
+
+//             .vertical-timeline-element-title-wrapper,
+//             .vertical-timeline-element-title-wrapper-description {
+//                 white-space: normal; /* Reset white-space property */
+//                 overflow: hidden;
+//                 text-overflow: ellipsis;
+//             }
+//             &__education {
+//                 max-height: 200px; /* Set a maximum height for the education section */
+//                 overflow-y: auto; /* Add a vertical scrollbar if content overflows */
+//             }
+//         }
+//     }
+// }
+
 @media only screen and (max-width: 768px) {
     .resume {
         overflow: hidden;
+        overflow-y: scroll; 
     }
 
     .timeline {
-        flex-direction: column;  /* Fix the typo here */
+        flex-direction: column;
+        
 
         &__experience,
         &__education {
             width: 100%;
             gap: 2rem;
-
-            .vertical-timeline-element-title-wrapper,
-            .vertical-timeline-element-title-wrapper-description {
-                white-space: normal; /* Reset white-space property */
+            
+            .vertical-timeline-element-title-wrapper {
+                white-space: normal;
                 overflow: hidden;
                 text-overflow: ellipsis;
+            }
+
+            .vertical-timeline-element-title-wrapper-description {
+                white-space: normal;
+                overflow-y: auto; /* Add a vertical scrollbar if content overflows */
+                max-height: 200px; /* Set a maximum height for the education section */
             }
         }
     }
 }
+
+
 
